Fixing tab spacing
git-svn-id: https://plugins.svn.wordpress.org/templ33t/branches/01_db_config@415156 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templ33t.css
+++ b/templ33t.css
@@ -74,6 +74,8 @@ div#templ33t_control ul {
 	border-bottom: 1px solid #909090;
 	overflow: hidden;
 	white-space: nowrap;
+	margin: 0px;
+	padding: 0px;
 }
 
 div#templ33t_control ul li {
